--- a/src/common/config.json
+++ b/src/common/config.json
@@ -1,7 +1,7 @@
 {
   "token": {
-    "audience": "rakida.upmc.com",
-    "issuer": "rakida-auth.upmc.com",
+    "audience": "some.website.com",
+    "issuer": "auth.website.com",
     "bearer": {
       "symmetricKey": "testing",
       "lifespanInMinutes": 1440
